<resources>
    <string name="general_app_name">Pass Butler</string>
    <string name="general_okay">OK</string>
    <string name="general_cancel">Abbrechen</string>
    <string name="general_relative_date_since">vor %1$s %2$s</string>
    <string name="general_relative_date_unit_second_one">Sekunde</string>
    <string name="general_relative_date_unit_second_other">Sekunden</string>
    <string name="general_relative_date_unit_minute_one">Minute</string>
    <string name="general_relative_date_unit_minute_other">Minuten</string>
    <string name="general_relative_date_unit_hour_one">Stunde</string>
    <string name="general_relative_date_unit_hour_other">Stunden</string>
    <string name="general_relative_date_unit_day_one">Tag</string>
    <string name="general_relative_date_unit_day_other">Tagen</string>
    <string name="general_relative_date_unit_month_one">Monat</string>
    <string name="general_relative_date_unit_month_other">Monaten</string>
    <string name="general_relative_date_unit_year_one">Jahr</string>
    <string name="general_relative_date_unit_year_other">Jahren</string>
    <string name="autofill_activity_name">AutoFill mit Pass Butler</string>
    <string name="autofill_unlock_entry_label">Ausfüllen mit Pass Butler</string>
    <string name="autofill_entry_label_username">%1$s</string>
    <string name="autofill_entry_label_password">Passwort für „%1$s“</string>
    <string name="autofill_selection_title">Ausfüllen mit Pass Butler</string>
    <string name="autofill_selection_subtitle_website">Webseite „%1$s“</string>
    <string name="autofill_selection_subtitle_app">App „%1$s“</string>
    <string name="form_serverurl_validation_error_empty">Server URL nicht ausgefüllt</string>
    <string name="form_serverurl_validation_error_invalid">Server URL nicht gültig</string>
    <string name="form_serverurl_validation_error_invalid_scheme">Server URL muss mit „https://“ beginnen</string>
    <string name="form_master_password_validation_error_empty">Master-Passwort nicht ausgefüllt</string>
    <string name="login_serverurl_hint">Server URL</string>
    <string name="login_username_hint">Benutzername</string>
    <string name="login_master_password_hint">Master-Passwort</string>
    <string name="login_local_login_label">Lokales Benutzerkonto</string>
    <string name="login_button_text">Anmelden</string>
    <string name="login_username_validation_error_empty">Benutzername nicht ausgefüllt</string>
    <string name="login_failed_general_title">Anmeldung hat nicht geklappt</string>
    <string name="login_failed_unauthorized_title">Anmeldedaten vermutlich nicht korrekt</string>
    <string name="register_local_user_title">Benutzerkonto registrieren</string>
    <string name="register_local_user_header">Benutzerkonto registrieren</string>
    <string name="register_local_user_description">Wenn Sie Ihre Passwörter zwischen mehreren Geräten synchronisieren möchten, können Sie es auf einem Pass Butler-Server registrieren.\n\nFolgende Bedingungen müssen erfüllt sein:\n\u2022 Registrierung auf Server aktiviert\n\u2022 Einladungs-Code von Server vorhanden\n\u2022 Benutzername nicht vergeben</string>
    <string name="register_local_user_serverurl_hint">Server URL</string>
    <string name="register_local_user_invitation_code_hint">Einladungs-Code</string>
    <string name="register_local_user_master_password_hint">Master-Passwort</string>
    <string name="register_local_user_button_text">Registrieren</string>
    <string name="register_local_user_invitation_code_validation_error_empty">Einladungs-Code nicht ausgefüllt</string>
    <string name="register_local_user_successful_message">Registrierung erfolgreich</string>
    <string name="register_local_user_failed_wrong_master_password_title">Master-Passwort ist nicht korrekt</string>
    <string name="register_local_user_failed_general_title">Registrierung hat nicht geklappt</string>
    <string name="register_local_user_failed_forbidden_title">Registrierung wurde von Server verweigert</string>
    <string name="locked_screen_header_normal">Pass Butler ist gesperrt</string>
    <string name="locked_screen_header_autofill">Ausfüllen mit Pass Butler</string>
    <string name="locked_screen_description">Bitte entsperren Sie Pass Butler mit den folgenden Möglichkeiten:</string>
    <string name="locked_screen_master_password_hint">Master-Passwort</string>
    <string name="locked_screen_button_password_text">Entsperren mit Passwort</string>
    <string name="locked_screen_method_dividing_text">– oder –</string>
    <string name="locked_screen_button_biometric_text">Biometrisch entsperren</string>
    <string name="locked_screen_button_biometric_disabled_hint_text">Aktivieren Sie biometrisches Entsperren in den Einstellungen von Pass Butler, um diese Funktion nutzen zu können.</string>
    <string name="locked_screen_biometrics_prompt_title">Pass Butler entsperren</string>
    <string name="locked_screen_biometrics_prompt_description">Entsperren Sie nun Pass Butler</string>
    <string name="locked_screen_biometrics_prompt_cancel_button_text">Abbrechen</string>
    <string name="locked_screen_biometrics_unlock_failed_general_title">Biometrisches Entsperren hat nicht geklappt</string>
    <string name="locked_screen_biometrics_unlock_failed_missing_key_title">Biometrisches Entsperren hat nicht geklappt - bitte richten Sie die Funktion erneut ein</string>
    <string name="locked_screen_unlock_failed_general_title">Entsperren hat nicht geklappt</string>
    <string name="locked_screen_unlock_failed_wrong_master_password_title">Master-Passwort ist nicht korrekt</string>
    <string name="drawer_header_title">Pass Butler</string>
    <string name="drawer_header_usertype_local">Benutzerkonto registrieren</string>
    <string name="drawer_open_description">Navigationsdrawer öffnen</string>
    <string name="drawer_close_description">Navigationsdrawer schließen</string>
    <string name="drawer_menu_item_overview">Übersicht</string>
    <string name="drawer_menu_item_settings">Einstellungen</string>
    <string name="drawer_menu_item_about">Über / Lizenz</string>
    <string name="drawer_menu_item_logout">Abmelden</string>
    <string name="drawer_menu_category_external_links">Externe Links</string>
    <string name="drawer_menu_item_homepage">Sicherheitskritisch.de</string>
    <string name="drawer_menu_item_googleplay">Bewerten auf Google Play</string>
    <string name="overview_last_sync_subtitle">Zuletzt synchronisiert: %1$s</string>
    <string name="overview_last_sync_never">Nie</string>
    <string name="overview_sync_successful_message">Synchronisation war erfolgreich</string>
    <string name="overview_sync_failed_message">Synchronisation hat nicht geklappt</string>
    <string name="overview_empty_screen_title">Noch keine Einträge</string>
    <string name="overview_empty_screen_description">Es wurden noch keine Einträge angelegt</string>
    <string name="overview_logout_failed_title">Abmeldung hat nicht geklappt</string>
    <string name="itemdetail_title_new">Neuen Eintrag anlegen</string>
    <string name="itemdetail_title_edit">Eintrag ansehen/bearbeiten</string>
    <string name="itemdetail_details_header">Details</string>
    <string name="itemdetail_title_hint">Titel</string>
    <string name="itemdetail_username_hint">Benutzername</string>
    <string name="itemdetail_password_hint">Passwort</string>
    <string name="itemdetail_url_hint">URL</string>
    <string name="itemdetail_notes_hint">Notizen</string>
    <string name="itemdetail_information_header">Informationen</string>
    <string name="itemdetail_modified_title">Verändert am</string>
    <string name="itemdetail_created_title">Erstellt am</string>
    <string name="itemdetail_id_title">UUID</string>
    <string name="itemdetail_authorizations_header">Zugang teilen</string>
    <string name="itemdetail_authorizations_description_owned_item">Teilen Sie den Zugang zu diesem Eintrag mit anderen Benutzern Ihres Pass Butler-Servers.</string>
    <string name="itemdetail_authorizations_description_shared_item">Der Zugang zu diesem Eintag wurde von dem Benutzer „%1$s“ am %2$s mit Ihnen geteilt. Sie dürfen den Eintrag ansehen und bearbeiten.</string>
    <string name="itemdetail_authorizations_description_shared_readonly_item">Der Zugang zu diesem Eintag wurde von dem Benutzer „%1$s“ am %2$s mit Ihnen geteilt. Sie dürfen den Eintrag lediglich ansehen.</string>
    <string name="itemdetail_authorizations_button_text">Zugang teilen</string>
    <string name="itemdetail_authorizations_footer_teaser">Registrieren Sie sich bei einem Pass Butler-Server, um den Zugang zu diesem Eintrag mit anderen Benutzern teilen zu können.</string>
    <string name="itemdetail_delete_header">Eintrag löschen</string>
    <string name="itemdetail_delete_button_title">Eintrag löschen</string>
    <string name="itemdetail_save_button_title">Speichern</string>
    <string name="itemdetail_title_validation_error_empty">Titel nicht ausgefüllt</string>
    <string name="itemdetail_save_failed_general_title">Speichern hat nicht geklappt</string>
    <string name="itemdetail_delete_successful_message">Löschen erfolgreich</string>
    <string name="itemdetail_delete_failed_general_title">Löschen hat nicht geklappt</string>
    <string name="itemauthorizations_title">Zugang teilen</string>
    <string name="itemauthorizations_header">Zugang teilen</string>
    <string name="itemauthorizations_description">Entscheiden Sie mit welchen Benutzern Sie den Eintrag teilen möchten. Sie können wählen ob der jeweilige Benutzer den Eintrag lediglich ansehen oder auch bearbeiten darf.</string>
    <string name="itemauthorizations_read_switch_title">Ansehen</string>
    <string name="itemauthorizations_write_switch_title">Bearbeiten</string>
    <string name="itemauthorizations_save_button_title">Übernehmen</string>
    <string name="itemauthorizations_empty_screen_title">Noch keine Benutzer</string>
    <string name="itemauthorizations_empty_screen_description">Auf Ihrem Pass Butler-Server existieren außer Ihnen noch keine weiteren Benutzer mit denen Sie den Eintrag teilen können.</string>
    <string name="itemauthorizations_save_failed_general_title">Speichern hat nicht geklappt</string>
    <string name="about_title">Über / Lizenz</string>
    <string name="about_header">Pass Butler</string>
    <string name="about_subheader">Version %1$s (gebaut am %2$s von dem Quellcodestand %3$s)</string>
    <string name="about_passage_1">Programmiert von Bastian Raschke</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_category_security_title">Sicherheit</string>
    <string name="settings_hide_passwords_setting_title">Passwörter ausblenden</string>
    <string name="settings_hide_passwords_setting_summary">Passwörter standardmäßig ausblenden, damit andere Personen diese nicht sehen</string>
    <string name="settings_automatic_lock_timeout_setting_title">Automatische Sperre</string>
    <string name="change_master_password_header">Master-Passwort ändern</string>
    <string name="change_master_password_description">Das Master-Passwort sichert alle Ihre Passwörter ab. Sie können es hier ändern. Falls Sie auf einem Pass Butler-Server registriert sind, muss dieser für die Änderung erreichbar sein!</string>
    <string name="change_master_password_disable_biometric_hint">Hinweis: Durch die Änderung wird das biometrische Entsperren deaktiviert und Sie müssen es erneut einrichten!</string>
    <string name="change_master_password_old_master_password_hint">Aktuelles Master-Passwort</string>
    <string name="change_master_password_new_master_password_hint">Neues Master-Passwort</string>
    <string name="change_master_password_new_master_password_confirm_hint">Neues Master-Passwort (Bestätigung)</string>
    <string name="change_master_password_button_text">Ändern</string>
</resources>