<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!-- The overview is always checked (the drawer is only shown on overview fragment -->
        <item
            android:id="@+id/drawer_menu_item_overview"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/icon_home_24dp"
            android:title="@string/drawer_menu_item_overview" />
        <item
            android:id="@+id/drawer_menu_item_settings"
            android:checkable="false"
            android:icon="@drawable/icon_settings_24dp"
            android:title="@string/drawer_menu_item_settings" />
        <item
            android:id="@+id/drawer_menu_item_recycle_bin"
            android:checkable="false"
            android:icon="@drawable/icon_delete_24dp"
            android:title="@string/drawer_menu_recycle_bin" />
        <item
            android:id="@+id/drawer_menu_item_about"
            android:checkable="false"
            android:icon="@drawable/icon_info_24dp"
            android:title="@string/drawer_menu_item_about" />
    </group>

    <item android:title="@string/drawer_menu_category_external_links">
        <menu>
            <item
                android:id="@+id/drawer_menu_item_website"
                android:icon="@drawable/icon_open_in_browser_24dp"
                android:title="@string/drawer_menu_item_website" />
            <item
                android:id="@+id/drawer_menu_item_googleplay"
                android:icon="@drawable/icon_favorite_24dp"
                android:title="@string/drawer_menu_item_googleplay" />
        </menu>
    </item>

</menu>
