<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- The `focusableInTouchMode` with `clickable` removes focus of `TextInputEditText` if user clicked outer area -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_root_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginM"
            android:layout_marginEnd="?marginM"
            android:text="@string/change_master_password_header"
            android:textAppearance="?textAppearanceHeadline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_subheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginM"
            android:layout_marginEnd="?marginM"
            android:text="@string/change_master_password_description"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_header" />

        <TextView
            android:id="@+id/textView_subheader_disable_biometric_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginXS"
            android:layout_marginEnd="?marginM"
            android:text="@string/change_master_password_disable_biometric_hint"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_subheader"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_old_master_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginM"
            android:layout_marginEnd="?marginM"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_subheader_disable_biometric_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_old_master_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_master_password_old_master_password_hint"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_new_master_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginM"
            android:layout_marginEnd="?marginM"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_old_master_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_new_master_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_master_password_new_master_password_hint"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_new_master_password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginXS"
            android:layout_marginEnd="?marginM"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_new_master_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_new_master_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_master_password_new_master_password_confirm_hint"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginM"
            android:layout_marginEnd="?marginM"
            android:layout_marginBottom="?marginM"
            android:text="@string/change_master_password_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_new_master_password_confirm"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>