<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- The `focusableInTouchMode` with `clickable` removes focus of `TextInputEditText` if user clicked outer area -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_root_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginM"
            android:layout_marginEnd="?marginM"
            android:text="@string/register_local_user_header"
            android:textAppearance="?textAppearanceHeadline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_subheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginS"
            android:layout_marginEnd="?marginM"
            android:text="@string/register_local_user_description"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_serverurl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginM"
            android:layout_marginEnd="?marginM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_subheader"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_serverurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_local_user_serverurl_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_invitation_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginS"
            android:layout_marginEnd="?marginM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_serverurl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_invitation_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_local_user_invitation_code_hint"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textCapCharacters" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_master_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginS"
            android:layout_marginEnd="?marginM"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_invitation_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_master_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_local_user_master_password_hint"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?marginM"
            android:layout_marginTop="?marginM"
            android:layout_marginEnd="?marginM"
            android:layout_marginBottom="?marginM"
            android:text="@string/register_local_user_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_master_password"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
